Fix tables on small devices

--- a/client/src/sass/primeng-custom.scss
+++ b/client/src/sass/primeng-custom.scss
@@ -739,6 +739,12 @@ p-table {
   }
 
   @media screen and (max-width: $small-view) {
+    .p-datatable-wrapper {
+      table {
+        width: auto;
+      }
+    }
+
     p-paginator {
       .p-paginator-current {
         display: none !important;
